# job-rigger

./: .gitignore  README.md  pyproject.toml
job_rigger/: __about__.py  __init__.py  main.py  models.py  utils.py
job_rigger/models/: __init__.py  company.py  company_detail.py  job_detail.py  job_search_result.py  people_search_result.py
tests/: __init__.py
