[tool.poetry]
name = "job-rigger"
version = "0.1.0"
description = "tools for job hunting"
authors = ["Thomas Galvin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
jupyterlab = "^4.0.9"
python-dotenv = "^1.0.0"
linkedin-api = "^2.0.3"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
